--- a/src/models/deepecg/notebooks/1_format_physionet_dataset.ipynb
+++ b/src/models/deepecg/notebooks/1_format_physionet_dataset.ipynb
@@ -4,9 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PhysioNet/Computing in Cardiology Challenge 2020\n",
-    "## Classification of 12-lead ECGs\n",
-    "### 1. Download and format dataset"
+    "# Physionet Challenge 2017 Dataset\n",
+    "### Sebastian D. Goodfellow, Ph.D."
    ]
   },
   {
@@ -18,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -32,12 +31,11 @@
    ],
    "source": [
     "# Import 3rd party libraries\n",
-    "import os\n",
     "import sys\n",
     "\n",
     "# Import local Libraries\n",
-    "sys.path.insert(0, os.path.dirname(os.path.dirname(os.path.abspath(os.getcwd()))))\n",
-    "from src.data.format_data import FormatData\n",
+    "sys.path.insert(0, r'.\\..')\n",
+    "from haifanet.data.physionet2017 import Physionet2017DB\n",
     "\n",
     "# Configure Notebook\n",
     "import warnings\n",
@@ -51,36 +49,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Download and Format Dataset"
+    "# Generate Database"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Formatting Physionet2020 dataset...\n"
+      "Generating Raw Physionet2017 Database ...\n",
+      "Unzipping database ...\n",
+      "Restructuring folders and files ...\n",
+      "Complete!\n",
+      "\n",
+      "Generating Processed Physionet2017 Database ...\n",
+      "Complete!\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Initialize data formater\n",
-    "data = FormatData()\n",
+    "# Initialize\n",
+    "physionet_2017_db = Physionet2017DB()\n",
     "\n",
-    "# Run format process\n",
-    "data.format(extract=False)"
+    "# Generate raw database\n",
+    "physionet_2017_db.generate_raw_db()\n",
+    "\n",
+    "# Generate processed database\n",
+    "physionet_2017_db.generate_processed_db()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -99,9 +100,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
