--- a/notebooks/1_format_data.ipynb
+++ b/notebooks/1_format_data.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# PhysioNet/Computing in Cardiology Challenge 2020\n",
     "## Classification of 12-lead ECGs\n",
-    "### 1. Visualize formatted dataset"
+    "### 1. Download and format dataset"
    ]
   },
   {
@@ -18,26 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
     "import sys\n",
     "\n",
     "# Import local Libraries\n",
-    "sys.path.insert(0, os.path.dirname(os.path.dirname(os.path.abspath(os.getcwd()))))\n",
-    "from src.visualization.plot_formatted_data import waveform_plot_interact\n",
+    "sys.path.insert(0, os.path.dirname(os.path.abspath(os.getcwd())))\n",
+    "from src.data.format_data import FormatData\n",
     "\n",
     "# Configure Notebook\n",
     "import warnings\n",
@@ -51,32 +42,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plot Waveforms"
+    "# Download and Format Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43d5bffad2ce423c9052642990270b3d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=3438, description='filename_id', max=6876), Output()), _dom_classes=('wi…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Physionet2020 dataset...\n"
+     ]
     }
    ],
    "source": [
-    "# Launch interactive plotter\n",
-    "waveform_plot_interact()"
+    "# Initialize data formater\n",
+    "data = FormatData()\n",
+    "\n",
+    "# Run format process\n",
+    "data.format(extract=False)"
    ]
   }
  ],
