--- a/notebooks/1_format_data.ipynb
+++ b/notebooks/1_format_data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "\n",
     "# Import local Libraries\n",
     "sys.path.insert(0, os.path.dirname(os.path.abspath(os.getcwd())))\n",
-    "from src.data.format_data import FormatData\n",
+    "from kardioml.data.format_data import FormatData\n",
     "\n",
     "# Configure Notebook\n",
     "import warnings\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
