--- a/notebooks/2_visualize_formatted_data.ipynb
+++ b/notebooks/2_visualize_formatted_data.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# PhysioNet/Computing in Cardiology Challenge 2020\n",
     "## Classification of 12-lead ECGs\n",
-    "### 1. Visualize formatted dataset"
+    "### 2. Visualize formatted dataset"
    ]
   },
   {
@@ -37,7 +37,7 @@
     "\n",
     "# Import local Libraries\n",
     "sys.path.insert(0, os.path.dirname(os.path.abspath(os.getcwd())))\n",
-    "from src.visualization.plot_formatted_data import waveform_plot_interact\n",
+    "from kardioml.visualization.plot_formatted_data import waveform_plot_interact\n",
     "\n",
     "# Configure Notebook\n",
     "import warnings\n",
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "530adb1fd39045b4bb5b240ba8ec2fd5",
+       "model_id": "6cd2b2dee71640188c12bc03c4dd8a71",
        "version_major": 2,
        "version_minor": 0
       },
