--- a/kardioml/models/physionet2017/notebooks/1_extract_features.ipynb
+++ b/kardioml/models/physionet2017/notebooks/1_extract_features.ipynb
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
@@ -41,7 +32,7 @@
     "# Import local Libraries\n",
     "sys.path.insert(0, os.path.dirname(os.path.dirname(os.path.dirname(os.path.dirname(os.path.abspath(os.getcwd()))))))\n",
     "from kardioml.models.physionet2017.features.feature_extractor import Features\n",
-    "from kardioml import DATA_PATH, ECG_LEADS\n",
+    "from kardioml import DATA_PATH, ECG_LEADS, FILTER_BAND_LIMITS\n",
     "\n",
     "# Configure Notebook\n",
     "import warnings\n",
@@ -60,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,24 +68,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def process_lead(idx, filenames, lead):\n",
     "    \n",
     "    # Extract features\n",
-    "        features = Features(filename=filenames[idx])\n",
-    "        features.extract_features(lead=lead, feature_groups=['full_waveform_features', 'rri_features', 'template_features'], \n",
-    "                                  filter_bandwidth=[3, 45])\n",
-    "        \n",
-    "        # Save features\n",
-    "        features.save_features(lead=lead)"
+    "    features = Features(filename=filenames[idx])\n",
+    "    features.extract_features(lead=lead, feature_groups=['full_waveform_features', 'rri_features', 'template_features'], \n",
+    "                              filter_bandwidth=FILTER_BAND_LIMITS)\n",
+    "\n",
+    "    # Save features\n",
+    "    features.save_features(lead=lead)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +93,7 @@
      "output_type": "stream",
      "text": [
       "Processing 6877 lead I signals.\n",
-      "Completed in 11.14 minutes.\n"
+      "Completed in 10.93 minutes.\n"
      ]
     }
    ],
@@ -125,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
