--- a/notebooks/1_format_data.ipynb
+++ b/notebooks/1_format_data.ipynb
@@ -63,7 +63,7 @@
     "data = FormatData()\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False)"
+    "data.format(extract=False, debug=False)"
    ]
   }
  ],
@@ -83,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
