added data preparation script

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,30 +24,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = '../data/raw/'"
+    "DATA_PATH = '../data/processed/'\n",
+    "META_PATH = '../data/meta/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "meta = pd.read_csv(DATA_PATH+'A0001.hea')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>train</th>\n",
+       "      <th>val</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[A0001, A0002, A0003, A0004, A0005, A0006, A00...</td>\n",
+       "      <td>[A0013, A0019, A0020, A0031, A0039, A0040, A00...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[A0003, A0004, A0005, A0006, A0007, A0008, A00...</td>\n",
+       "      <td>[A0001, A0002, A0017, A0029, A0030, A0044, A00...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[A0001, A0002, A0004, A0006, A0007, A0008, A00...</td>\n",
+       "      <td>[A0003, A0005, A0009, A0010, A0011, A0012, A00...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[A0001, A0002, A0003, A0004, A0005, A0006, A00...</td>\n",
+       "      <td>[A0008, A0016, A0021, A0033, A0036, A0038, A00...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[A0001, A0002, A0003, A0005, A0008, A0009, A00...</td>\n",
+       "      <td>[A0004, A0006, A0007, A0014, A0015, A0024, A00...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               train  \\\n",
+       "0  [A0001, A0002, A0003, A0004, A0005, A0006, A00...   \n",
+       "1  [A0003, A0004, A0005, A0006, A0007, A0008, A00...   \n",
+       "2  [A0001, A0002, A0004, A0006, A0007, A0008, A00...   \n",
+       "3  [A0001, A0002, A0003, A0004, A0005, A0006, A00...   \n",
+       "4  [A0001, A0002, A0003, A0005, A0008, A0009, A00...   \n",
+       "\n",
+       "                                                 val  \n",
+       "0  [A0013, A0019, A0020, A0031, A0039, A0040, A00...  \n",
+       "1  [A0001, A0002, A0017, A0029, A0030, A0044, A00...  \n",
+       "2  [A0003, A0005, A0009, A0010, A0011, A0012, A00...  \n",
+       "3  [A0008, A0016, A0021, A0033, A0036, A0038, A00...  \n",
+       "4  [A0004, A0006, A0007, A0014, A0015, A0024, A00...  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#get a list of files\n",
-    "filenames = [file.split('.')[0] for file in os.listdir(DATA_PATH) if 'json' in file]\n",
+    "filenames = [file.split('.')[0] for file in os.listdir(META_PATH) if 'json' in file]\n",
     "\n",
     "# List of meta data\n",
     "meta_data_list = list()\n",
@@ -56,11 +124,108 @@
     "for filename in filenames:\n",
     "    \n",
     "    # Import meta dat\n",
-    "    data = json.load(open(DATA_PATH+ f'{filename}.json'))\n",
+    "    data = json.load(open(META_PATH+ f'{filename}.json'))\n",
     "    meta_data_list.append(data)\n",
     "    \n",
     "# Generate DataFrame\n",
-    "meta_data = pd.DataFrame(meta_data_list)"
+    "meta_data = pd.DataFrame(meta_data_list)\n",
+    "\n",
+    "meta_data.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>train</th>\n",
+       "      <th>val</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[A0001, A0002, A0003, A0004, A0005, A0006, A00...</td>\n",
+       "      <td>[A0013, A0019, A0020, A0031, A0039, A0040, A00...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[A0003, A0004, A0005, A0006, A0007, A0008, A00...</td>\n",
+       "      <td>[A0001, A0002, A0017, A0029, A0030, A0044, A00...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[A0001, A0002, A0004, A0006, A0007, A0008, A00...</td>\n",
+       "      <td>[A0003, A0005, A0009, A0010, A0011, A0012, A00...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[A0001, A0002, A0003, A0004, A0005, A0006, A00...</td>\n",
+       "      <td>[A0008, A0016, A0021, A0033, A0036, A0038, A00...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[A0001, A0002, A0003, A0005, A0008, A0009, A00...</td>\n",
+       "      <td>[A0004, A0006, A0007, A0014, A0015, A0024, A00...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               train  \\\n",
+       "0  [A0001, A0002, A0003, A0004, A0005, A0006, A00...   \n",
+       "1  [A0003, A0004, A0005, A0006, A0007, A0008, A00...   \n",
+       "2  [A0001, A0002, A0004, A0006, A0007, A0008, A00...   \n",
+       "3  [A0001, A0002, A0003, A0004, A0005, A0006, A00...   \n",
+       "4  [A0001, A0002, A0003, A0005, A0008, A0009, A00...   \n",
+       "\n",
+       "                                                 val  \n",
+       "0  [A0013, A0019, A0020, A0031, A0039, A0040, A00...  \n",
+       "1  [A0001, A0002, A0017, A0029, A0030, A0044, A00...  \n",
+       "2  [A0003, A0005, A0009, A0010, A0011, A0012, A00...  \n",
+       "3  [A0008, A0016, A0021, A0033, A0036, A0038, A00...  \n",
+       "4  [A0004, A0006, A0007, A0014, A0015, A0024, A00...  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meta_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.io import loadmat\n",
+    "x = loadmat('test.mat')"
    ]
   },
   {
