started the refactoring of the code

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -758,6 +758,8 @@
     "8. normal vs abnormals softmax loss. final decision based on the rule: normal vs abnormal; which abnormal\n",
     "9. r peaks position\n",
     "10. SBD\n",
+    "11. std of the apmlitude\n",
+    "12. normalization based on median height of peaks\n",
     "\n",
     "Models:\n",
     "1. auxiliary classifier\n"
