--- a/kardioml/models/deepecg/notebooks/2_create_cross_validation_dataset.ipynb
+++ b/kardioml/models/deepecg/notebooks/2_create_cross_validation_dataset.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# PhysioNet/Computing in Cardiology Challenge 2020\n",
     "## Classification of 12-lead ECGs\n",
-    "### 2. Create Training Dataset"
+    "### 2. Create Cross-Validation Dataset"
    ]
   },
   {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -36,12 +36,11 @@
     "import sys\n",
     "import json\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.utils.class_weight import compute_class_weight\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
     "\n",
     "# Import local Libraries\n",
     "sys.path.insert(0, os.path.dirname(os.path.dirname(os.path.dirname(os.path.dirname(os.path.abspath(os.getcwd()))))))\n",
-    "from kardioml import DATA_PATH, LABELS_LOOKUP\n",
+    "from kardioml import DATA_PATH\n",
     "\n",
     "# Configure Notebook\n",
     "import warnings\n",
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +126,7 @@
        "4    A0005     PVC"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,37 +146,7 @@
     "data = pd.DataFrame({'filename': filenames, 'labels': labels})\n",
     "\n",
     "# View DataFrame\n",
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set split ratios\n",
-    "train_size = 0.8\n",
-    "val_size = 0.2\n",
-    "assert train_size + val_size ==  1\n",
-    "\n",
-    "# Split dataset into train/evaluate\n",
-    "data_train, data_val = train_test_split(data, test_size=val_size, stratify=data['labels'], random_state=0, shuffle=True)\n",
-    "\n",
-    "# Lookup file\n",
-    "training_lookup = {'train': data_train['filename'].tolist(), 'val': data_val['filename'].tolist()}\n",
-    "\n",
-    "# Save file\n",
-    "os.makedirs(os.path.join(DATA_PATH, 'deepecg'), exist_ok=True)\n",
-    "with open(os.path.join(DATA_PATH, 'deepecg', 'training_lookup.json'), 'w') as file:\n",
-    "    json.dump(training_lookup, file, sort_keys=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Class Weights"
+    "data.head()\n"
    ]
   },
   {
@@ -186,39 +155,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get meta data files\n",
-    "filenames = [file.split('.')[0] for file in os.listdir(os.path.join(DATA_PATH, 'formatted')) if 'json' in file]\n",
+    "# Initialize K-Folds\n",
+    "skf = StratifiedKFold(n_splits=5, random_state=0, shuffle=True)\n",
     "\n",
-    "# Get label for each file\n",
-    "labels = list()\n",
-    "for filename in filenames:\n",
-    "    meta_data = json.load(open(os.path.join(DATA_PATH, 'formatted', '{}.json'.format(filename))))\n",
-    "    labels.extend([meta_data['labels'][0], meta_data['labels'][1]] if len(meta_data['labels']) > 1 \n",
-    "                                 else [meta_data['labels'][0]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['AF', 'I-AVB', 'LBBB', 'Normal', 'PAC', 'PVC', 'RBBB', 'STD', 'STE']\n",
-      "[0.17772318 0.30055402 0.91949153 0.23638344 0.35227273 0.31\n",
-      " 0.11685514 0.25057737 1.        ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Class weights\n",
-    "classes = list(LABELS_LOOKUP.keys())\n",
-    "weights = compute_class_weight(class_weight='balanced', classes=classes, y=labels)\n",
-    "weights = weights / np.max(weights)\n",
-    "print(classes)\n",
-    "print(weights) "
+    "# Loop through folds\n",
+    "for cv_fold, (train_index, val_index) in enumerate(skf.split(data, data['labels'])):\n",
+    "\n",
+    "    # Lookup file\n",
+    "    training_lookup = {'train': data.loc[train_index, 'filename'].tolist(), \n",
+    "                       'val': data.loc[val_index, 'filename'].tolist()}\n",
+    "    \n",
+    "    # Save file\n",
+    "    os.makedirs(os.path.join(DATA_PATH, 'deepecg', 'cross_validation', str(cv_fold + 1)), exist_ok=True)\n",
+    "    with open(os.path.join(DATA_PATH, 'deepecg', 'cross_validation', str(cv_fold + 1), 'training_lookup.json'), 'w') as file:\n",
+    "        json.dump(training_lookup, file, sort_keys=True)"
    ]
   }
  ],
