--- a/kardioml/models/deepecg/notebooks/1_create_training_dataset.ipynb
+++ b/kardioml/models/deepecg/notebooks/1_create_training_dataset.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -35,13 +35,13 @@
     "import os\n",
     "import sys\n",
     "import json\n",
+    "import random\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.utils.class_weight import compute_class_weight\n",
     "\n",
     "# Import local Libraries\n",
     "sys.path.insert(0, os.path.dirname(os.path.dirname(os.path.dirname(os.path.dirname(os.path.abspath(os.getcwd()))))))\n",
-    "from kardioml import DATA_PATH, LABELS_LOOKUP\n",
+    "from kardioml import DATA_PATH\n",
     "\n",
     "# Configure Notebook\n",
     "import warnings\n",
@@ -55,12 +55,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create Training Lookup File"
+    "# Split Physionet 2020 Training Data\n",
+    "## Create Training Lookup File"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -86,98 +87,111 @@
        "      <th></th>\n",
        "      <th>filename</th>\n",
        "      <th>labels</th>\n",
+       "      <th>path</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>A0001</td>\n",
        "      <td>RBBB</td>\n",
+       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>A0002</td>\n",
        "      <td>Normal</td>\n",
+       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>A0003</td>\n",
        "      <td>AF</td>\n",
+       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>A0004</td>\n",
        "      <td>AF</td>\n",
+       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>A0005</td>\n",
        "      <td>PVC</td>\n",
+       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  filename  labels\n",
-       "0    A0001    RBBB\n",
-       "1    A0002  Normal\n",
-       "2    A0003      AF\n",
-       "3    A0004      AF\n",
-       "4    A0005     PVC"
+       "  filename  labels                                               path\n",
+       "0    A0001    RBBB  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...\n",
+       "1    A0002  Normal  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...\n",
+       "2    A0003      AF  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...\n",
+       "3    A0004      AF  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...\n",
+       "4    A0005     PVC  C:\\Users\\sebig\\Documents\\Code\\physionet-challe..."
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Get meta data files\n",
-    "filenames = [file.split('.')[0] for file in os.listdir(os.path.join(DATA_PATH, 'formatted')) if 'json' in file]\n",
+    "filenames = [file.split('.')[0] for file in os.listdir(os.path.join(DATA_PATH, 'physionet_2020', 'formatted')) \n",
+    "             if 'json' in file]\n",
     "\n",
     "# Get label for each file\n",
     "labels = list()\n",
     "for filename in filenames:\n",
-    "    meta_data = json.load(open(os.path.join(DATA_PATH, 'formatted', '{}.json'.format(filename))))\n",
+    "    meta_data = json.load(open(os.path.join(DATA_PATH, 'physionet_2020', 'formatted', '{}.json'.format(filename))))\n",
     "    labels.append('{}-{}'.format(meta_data['labels'][0], meta_data['labels'][1]) if len(meta_data['labels']) > 1 \n",
     "                                 else meta_data['labels'][0])\n",
     "\n",
     "# Combine\n",
     "data = pd.DataFrame({'filename': filenames, 'labels': labels})\n",
     "\n",
+    "# Add path\n",
+    "data['path'] = data['filename'].map(lambda filename: os.path.join(DATA_PATH, 'physionet_2020', 'formatted', filename))\n",
+    "\n",
     "# View DataFrame\n",
     "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set split ratios\n",
-    "train_size = 0.8\n",
-    "val_size = 0.2\n",
-    "assert train_size + val_size ==  1\n",
-    "\n",
-    "# Split dataset into train/evaluate\n",
-    "data_train, data_val = train_test_split(data, test_size=val_size, stratify=data['labels'], random_state=0, shuffle=True)\n",
-    "\n",
-    "# Lookup file\n",
-    "training_lookup = {'train': data_train['filename'].tolist(), 'val': data_val['filename'].tolist()}\n",
-    "\n",
-    "# Save file\n",
-    "os.makedirs(os.path.join(DATA_PATH, 'deepecg'), exist_ok=True)\n",
-    "with open(os.path.join(DATA_PATH, 'deepecg', 'training_lookup.json'), 'w') as file:\n",
-    "    json.dump(training_lookup, file, sort_keys=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Class Weights"
+    "## Split Data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set split ratios\n",
+    "train_size = 0.8\n",
+    "val_size = 0.2\n",
+    "assert train_size + val_size == 1\n",
+    "\n",
+    "# Split dataset into train/evaluate\n",
+    "data_train, data_val = train_test_split(data, test_size=val_size, stratify=data['labels'], random_state=0, shuffle=True)\n",
+    "\n",
+    "# Lookup file\n",
+    "training_lookup = {'train': data_train['path'].tolist(), 'val': data_val['path'].tolist()}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Add Augmentation Datasets\n",
+    "## Zheng 2020"
    ]
   },
   {
@@ -186,39 +200,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get meta data files\n",
-    "filenames = [file.split('.')[0] for file in os.listdir(os.path.join(DATA_PATH, 'formatted')) if 'json' in file]\n",
+    "# Get file paths\n",
+    "paths = [os.path.join(DATA_PATH, 'zheng_2020', 'formatted', file.split('.')[0]) \n",
+    "         for file in os.listdir(os.path.join(DATA_PATH, 'zheng_2020', 'formatted')) if 'json' in file]\n",
     "\n",
-    "# Get label for each file\n",
-    "labels = list()\n",
-    "for filename in filenames:\n",
-    "    meta_data = json.load(open(os.path.join(DATA_PATH, 'formatted', '{}.json'.format(filename))))\n",
-    "    labels.extend([meta_data['labels'][0], meta_data['labels'][1]] if len(meta_data['labels']) > 1 \n",
-    "                                 else [meta_data['labels'][0]])"
+    "# Add to lookup dictionary\n",
+    "training_lookup['train'].extend(paths)\n",
+    "random.shuffle(training_lookup['train'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save Lookup JSON"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['AF', 'I-AVB', 'LBBB', 'Normal', 'PAC', 'PVC', 'RBBB', 'STD', 'STE']\n",
-      "[0.17772318 0.30055402 0.91949153 0.23638344 0.35227273 0.31\n",
-      " 0.11685514 0.25057737 1.        ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Class weights\n",
-    "classes = list(LABELS_LOOKUP.keys())\n",
-    "weights = compute_class_weight(class_weight='balanced', classes=classes, y=labels)\n",
-    "weights = weights / np.max(weights)\n",
-    "print(classes)\n",
-    "print(weights) "
+    "# Save file\n",
+    "os.makedirs(os.path.join(DATA_PATH, 'deepecg'), exist_ok=True)\n",
+    "with open(os.path.join(DATA_PATH, 'deepecg', 'training_lookup.json'), 'w') as file:\n",
+    "    json.dump(training_lookup, file, sort_keys=True)"
    ]
   }
  ],
@@ -238,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
