--- a/kardioml/models/deepecg/notebooks/2_create_cross_validation_dataset.ipynb
+++ b/kardioml/models/deepecg/notebooks/2_create_cross_validation_dataset.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -35,6 +35,7 @@
     "import os\n",
     "import sys\n",
     "import json\n",
+    "import random\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "\n",
@@ -54,12 +55,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create Training Lookup File"
+    "# Add Augmentation Datasets\n",
+    "## Zheng 2020"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get file paths\n",
+    "paths = [os.path.join(DATA_PATH, 'zheng_2020', 'formatted', file.split('.')[0]) \n",
+    "         for file in os.listdir(os.path.join(DATA_PATH, 'zheng_2020', 'formatted')) if 'json' in file]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Split Physionet 2020 Training Data\n",
+    "## Create Training Lookup File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -85,73 +106,90 @@
        "      <th></th>\n",
        "      <th>filename</th>\n",
        "      <th>labels</th>\n",
+       "      <th>path</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>A0001</td>\n",
        "      <td>RBBB</td>\n",
+       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>A0002</td>\n",
        "      <td>Normal</td>\n",
+       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>A0003</td>\n",
        "      <td>AF</td>\n",
+       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>A0004</td>\n",
        "      <td>AF</td>\n",
+       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>A0005</td>\n",
        "      <td>PVC</td>\n",
+       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  filename  labels\n",
-       "0    A0001    RBBB\n",
-       "1    A0002  Normal\n",
-       "2    A0003      AF\n",
-       "3    A0004      AF\n",
-       "4    A0005     PVC"
+       "  filename  labels                                               path\n",
+       "0    A0001    RBBB  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...\n",
+       "1    A0002  Normal  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...\n",
+       "2    A0003      AF  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...\n",
+       "3    A0004      AF  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...\n",
+       "4    A0005     PVC  C:\\Users\\sebig\\Documents\\Code\\physionet-challe..."
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Get meta data files\n",
-    "filenames = [file.split('.')[0] for file in os.listdir(os.path.join(DATA_PATH, 'formatted')) if 'json' in file]\n",
+    "filenames = [file.split('.')[0] for file in os.listdir(os.path.join(DATA_PATH, 'physionet_2020', 'formatted')) \n",
+    "             if 'json' in file]\n",
     "\n",
     "# Get label for each file\n",
     "labels = list()\n",
     "for filename in filenames:\n",
-    "    meta_data = json.load(open(os.path.join(DATA_PATH, 'formatted', '{}.json'.format(filename))))\n",
+    "    meta_data = json.load(open(os.path.join(DATA_PATH, 'physionet_2020', 'formatted', '{}.json'.format(filename))))\n",
     "    labels.append('{}-{}'.format(meta_data['labels'][0], meta_data['labels'][1]) if len(meta_data['labels']) > 1 \n",
     "                                 else meta_data['labels'][0])\n",
     "\n",
     "# Combine\n",
     "data = pd.DataFrame({'filename': filenames, 'labels': labels})\n",
     "\n",
+    "# Add path\n",
+    "data['path'] = data['filename'].map(lambda filename: os.path.join(DATA_PATH, 'physionet_2020', 'formatted', filename))\n",
+    "\n",
     "# View DataFrame\n",
-    "data.head()\n"
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split and Save"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,6 +202,10 @@
     "    # Lookup file\n",
     "    training_lookup = {'train': data.loc[train_index, 'filename'].tolist(), \n",
     "                       'val': data.loc[val_index, 'filename'].tolist()}\n",
+    "    \n",
+    "    # Add augmentationd data\n",
+    "    training_lookup['train'].extend(paths)\n",
+    "    random.shuffle(training_lookup['train'])\n",
     "    \n",
     "    # Save file\n",
     "    os.makedirs(os.path.join(DATA_PATH, 'deepecg', 'cross_validation', str(cv_fold + 1)), exist_ok=True)\n",
@@ -188,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
