--- a/notebooks/1_format_data.ipynb
+++ b/notebooks/1_format_data.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
@@ -28,7 +37,8 @@
     "\n",
     "# Import local Libraries\n",
     "sys.path.insert(0, os.path.dirname(os.path.abspath(os.getcwd())))\n",
-    "from kardioml.data.format_data import FormatData\n",
+    "from kardioml.data.format_data_physionet_2020 import FormatDataPhysionet2020\n",
+    "from kardioml.data.format_data_zheng_2020 import FormatDataZheng2020\n",
     "\n",
     "# Configure Notebook\n",
     "import warnings\n",
@@ -42,7 +52,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Download and Format Dataset"
+    "# Download and Format Dataset\n",
+    "## Physionet 2020"
    ]
   },
   {
@@ -54,13 +65,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Formatting Physionet2020 dataset...\n"
+      "Formatting Physionet2020 dataset...\n",
+      "Extracting dataset...\n"
      ]
     }
    ],
    "source": [
     "# Initialize data formater\n",
-    "data = FormatData()\n",
+    "data = FormatDataPhysionet2020()\n",
+    "\n",
+    "# Run format process\n",
+    "data.format(extract=True, debug=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Zheng et al. (2019)\n",
+    "### https://figshare.com/collections/ChapmanECG/4560497/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Zheng et al. (2020) dataset...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize data formater\n",
+    "data = FormatDataZheng2020()\n",
     "\n",
     "# Run format process\n",
     "data.format(extract=False, debug=False)"
@@ -83,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
