--- a/notebooks/synthetic_noise.ipynb
+++ b/notebooks/synthetic_noise.ipynb
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
@@ -61,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,11 +92,89 @@
     "    mod_t = sig_t + amplitude*np.sin(w*sig_t)\n",
     "    mod_v = np.interp(mod_t, sig_t, sig_v)\n",
     "    return [sig_t, mod_v]\n",
-    "\n",
-    "def generate_noise_burst(waveform):\n",
-    "    \"\"\"Generate multiple noise bursts.\"\"\"\n",
-    "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 366,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "from scipy.stats import truncnorm\n",
+    "\n",
+    "\n",
+    "def generate_baseline_wandering_noise(waveform, fs, probability=0.5):\n",
+    "    \"\"\"Adds baseline wandering to the input signal.\"\"\"\n",
+    "    waveform = waveform.squeeze()\n",
+    "    if coin_flip(probability):\n",
+    "        \n",
+    "        # Generate time array\n",
+    "        time = np.arange(len(waveform)) * 1 / fs\n",
+    "        \n",
+    "        # Get number of baseline signals\n",
+    "        baseline_signals = random.randint(1, 5)\n",
+    "        \n",
+    "        # Loop through baseline signals\n",
+    "        for baseline_signal in range(baseline_signals):\n",
+    "            \n",
+    "            # Add noise\n",
+    "            waveform += random.uniform(0.01, 0.75) * np.sin(2 * np.pi * random.uniform(0.001, 0.5) * time + random.uniform(0, 60))\n",
+    "\n",
+    "    return waveform\n",
+    "\n",
+    "\n",
+    "def generate_high_frequency_noise(waveform, fs, probability=0.5):\n",
+    "    \"\"\"Adds high frequency sinusoidal noise to the input signal.\"\"\"\n",
+    "    waveform = waveform.squeeze()\n",
+    "    if coin_flip(probability):\n",
+    "        \n",
+    "        # Generate time array\n",
+    "        time = np.arange(len(waveform)) * 1 / fs\n",
+    "\n",
+    "        # Add noise\n",
+    "        waveform += random.uniform(0.001, 0.3) * np.sin(2 * np.pi * random.uniform(50, 200) * time + random.uniform(0, 60))\n",
+    "\n",
+    "    return waveform\n",
+    "\n",
+    "\n",
+    "def generate_gaussian_noise(waveform, probability=0.5):\n",
+    "    \"\"\"Adds white noise noise to the input signal.\"\"\"\n",
+    "    waveform = waveform.squeeze()\n",
+    "    if coin_flip(probability):\n",
+    "        \n",
+    "        waveform += np.random.normal(loc=0.0, scale=random.uniform(0.01, 0.25), size=len(waveform))\n",
+    "\n",
+    "    return waveform\n",
+    "\n",
+    "\n",
+    "def generate_pulse_noise(waveform, fs, probability=0.5):\n",
+    "    \"\"\"Adds gaussian pulse to the input signal.\"\"\"\n",
+    "    waveform = waveform.squeeze()\n",
+    "    if coin_flip(probability):\n",
+    "\n",
+    "        # Get pulse\n",
+    "        pulse = signal.gaussian(int(len(waveform) * random.uniform(0.05, 0.010)), std=random.randint(50, 200))\n",
+    "        pulse = np.diff(pulse)\n",
+    "        \n",
+    "        # Get remainder\n",
+    "        remainder = len(waveform) - len(pulse)\n",
+    "        if remainder >= 0:\n",
+    "            left_pad = int(remainder * random.uniform(0., 1.))\n",
+    "            right_pad = remainder - left_pad\n",
+    "            pulse = np.pad(pulse, (left_pad, right_pad), 'constant', constant_values=0)\n",
+    "            pulse = pulse / pulse.max()\n",
+    "\n",
+    "        waveform += pulse * random.uniform(waveform.max()*1.5, waveform.max()*2)\n",
+    "        \n",
+    "    return waveform\n",
+    "\n",
+    "\n",
+    "def coin_flip(probability):\n",
+    "    if random.random() < probability:\n",
+    "        return True\n",
+    "    return False"
    ]
   },
   {
@@ -117,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,6 +197,7 @@
     "\n",
     "    # Import waveforms\n",
     "    waveforms = np.load(os.path.join(path, '{}.npy'.format(filename)))\n",
+    "    waveforms = (waveforms - waveforms.mean()) / waveforms.std()\n",
     "\n",
     "    # Time array\n",
     "    time = np.arange(waveforms.shape[1]) * 1 / FS\n",
@@ -141,7 +211,11 @@
     "    ax1.set_title('File Name: {}'.format(filename), fontsize=20, loc='left', x=0)\n",
     "    shift = 0\n",
     "    for channel_id in range(waveforms.shape[0]):\n",
-    "        ax1.plot(time, waveforms[channel_id, :] + shift, '-k', lw=2)\n",
+    "        waveform_plot = generate_baseline_wandering_noise(waveform=waveforms[channel_id, :], fs=FS, probability=1.)\n",
+    "        waveform_plot = generate_high_frequency_noise(waveform=waveforms[channel_id, :], fs=FS, probability=1.)\n",
+    "        # waveform_plot = generate_gaussian_noise(waveform=waveforms[channel_id, :], probability=1.)\n",
+    "        waveform_plot = generate_pulse_noise(waveform=waveforms[channel_id, :], fs=FS, probability=1.)\n",
+    "        ax1.plot(time, waveform_plot + shift, '-k', lw=2)\n",
     "        ax1.text(0.1, 0.25 + shift, ECG_LEADS[channel_id], color='red', fontsize=16, ha='left')\n",
     "        shift += 3\n",
     "\n",
@@ -158,7 +232,7 @@
     "def waveform_plot_interact():\n",
     "    \"\"\"Launch interactive plotting widget.\"\"\"\n",
     "    # Set data path\n",
-    "    path = os.path.join(DATA_PATH, 'formatted')\n",
+    "    path = os.path.join(DATA_PATH, 'physionet_2020', 'formatted')\n",
     "\n",
     "    # Get filenames\n",
     "    filenames = [filename.split('.')[0] for filename in os.listdir(path) if 'npy' in filename]\n",
@@ -171,13 +245,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
+   "execution_count": 368,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6601b3725f6a47cfa8e11d9275274311",
+       "model_id": "9e8f900f027f4aa3b3928f15a3d81fe4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,9 +275,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "5617"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
